added api & html routes, updated server.js, added index.js to models to access workout schema, added export to workout schema

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav>
-    <a href="/">Fitness Tracker</a>
+    <a href="/">Fitness Tracker Buddy</a>
     <a href="/stats">Dashboard</a>
   </nav>
   <div class="wrapper workout">
@@ -41,7 +41,7 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="../routes/api.js"></script>
+  <script src="/api.js"></script>
   <script src="/workout.js"></script>
   <script src="/index.js"></script>
 </body>
